<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/principal_linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/saudacao_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_saudacao" />

    <LinearLayout
        android:id="@+id/secundario_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/valor_text_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/texto_hint_introduza_"
            android:inputType="number"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

        <Button
            android:id="@+id/calcular_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_calcular" />

    </LinearLayout>

    <TextView
        android:id="@+id/resultado_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_resultado" />

    <TextView
        android:id="@+id/media_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_inicial_media" />
</LinearLayout>